remove deprecated API usage